fixed java 8 errors